# skills

./: .autocorrectignore  .gitignore  .ls-lint.yml  .markdownlint-cli2.yaml  .metadata.json  .skillignore  .typos.toml  AGENTS.md  README.md  biome.jsonc  prek.toml  pyproject.toml  registry.yaml  surge
.github/workflows/: ci.yml
.mise/: config.toml
.mise/tasks/: check-lint-excludes.sh  format.sh  lint.sh
actionbook/: .skillshare-meta.json  SKILL.md
actionbook/references/: command-reference.md
agent-browser/: .skillshare-meta.json
beta/actionbook/: SKILL.md
beta/amp-skill-smoke/: SKILL.md
beta/amp-thread-digest/: SKILL.md
beta/amp-todo/: SKILL.md
beta/browser-harness/: install.md
beta/demand-audit-v0/: SKILL.md
beta/demand-audit-v1/: SKILL.md
beta/demand-audit-v2/: SKILL.md
beta/oracle/: SKILL.md
browser-harness/: admin.py
brrr-now/: SKILL.md
brrr-now-patch/: SKILL.md
conventional-commits/: .skillshare-meta.json
demand-audit-v0/: SKILL.md
demand-audit-v1/: SKILL.md
demand-audit-v2/: SKILL.md
demand-xray/: SKILL.md
electron/: .skillshare-meta.json
exe-backup/: SKILL.md
exe.dev/: .skillshare-meta.json
external-skills/agent-browser/: .skillshare-meta.json
external-skills/chrome-cdp/: .skillshare-meta.json
external-skills/electron/: .skillshare-meta.json
external-skills/skill-creator/: .skillshare-meta.json
external-skills/skill-creator/eval-viewer/: generate_review.py
external-skills/skill-creator/scripts/: aggregate_benchmark.py  generate_report.py  package_skill.py  run_eval.py
external-skills/skillshare/: .skillshare-meta.json
extras/amp/: AGENTS.global.md  AGENTS.md
extras/claude/: CLAUDE.md
extras/codex/: AGENTS.md
linear-cli/: SKILL.md
linear-cli-patch/: SKILL.md
linux-server/: SKILL.md
longbridge/: .skillshare-meta.json
network-triage/: SKILL.md
prek/: .skillshare-meta.json  SKILL.md
shelley-backup/: SKILL.md
skill-creator/: .skillshare-meta.json
skills-beta/agent-friendly-cli-audit/: SKILL.md
skills-beta/amp-thread-digest/: SKILL.md
skills-beta/amp-thread-digest/scripts/: main.sh
skills-beta/assess-convex-fit/: SKILL.md
skills-beta/assess-convex-fit/agents/: openai.yaml
skills-beta/ast-grep/: SKILL.md
skills-beta/autoreview/: SKILL.md
skills-beta/autoreview/scripts/: autoreview
skills-beta/autoreview/tests/: test_autoreview_hardening.py
skills-beta/browser-harness/: SKILL.md
skills-beta/convex/design/: SKILL.md
skills-beta/convex/quickstart/: SKILL.md
skills-beta/demand-audit/: SKILL.md
skills-beta/demand-audit-v0/: SKILL.md
skills-beta/demand-audit-v1/: SKILL.md
skills-beta/demand-audit-v2/: SKILL.md
skills-beta/demand-audit/agents/: openai.yaml
skills-beta/demand-audit/references/: audit-protocol.md
skills-beta/grill-me-pro/: SKILL.md
skills-beta/image-generation-workbench/: SKILL.md
skills-beta/image-generation-workbench/agents/: openai.yaml
skills-beta/image-generation-workbench/references/: AGENTS.md  api-selection.md  prompt-recipes.md  tool-parameters.md  visual-qa.md
skills-beta/image-generation-workbench/scripts/: image_workbench.py
skills-beta/lark-meeting-amp-summary/scripts/: lark_meeting_stt.py
skills-beta/openai/: SKILL.md
skills-beta/openai/agents/: openai.yaml
skills-beta/oracle/: SKILL.md
skills-beta/pr-comments/: SKILL.md
skills-beta/pr-open/: SKILL.md
skills-beta/ralph/: SKILL.md
skills-beta/ralph/agents/: openai.yaml
skills-beta/ralph/sop/: review-pr.md  review.md
skills-beta/ralph/templates/: ttok.py
skills-beta/text-to-lottie/references/: player-contract.md
skills-beta/things/: SKILL.md
skills-beta/things/scripts/: things_query.py
skills-beta/web-fullstack-start/: SKILL.md
skills-stable/ast-grep/: SKILL.md
skills-stable/audit-product-demand/: SKILL.md
skills-stable/brrr-now/: SKILL.md
skills-stable/brrr-now/agents/: openai.yaml
skills-stable/choose-virtualization-sandbox/: SKILL.md
skills-stable/codex-trace-inspect/: SKILL.md
skills-stable/demand-audit/: SKILL.md
skills-stable/design-convex-systems/: SKILL.md
skills-stable/end-to-end-monitoring/: SKILL.md
skills-stable/explain-diff-html/: SKILL.md
skills-stable/feishu-im-snapshot/: SKILL.md
skills-stable/image-generation-workbench/: SKILL.md
skills-stable/image-workbench/: SKILL.md
skills-stable/lark-meeting-amp-summary/: SKILL.md
skills-stable/lark-meeting-summary/: SKILL.md
skills-stable/linux-server/: SKILL.md
skills-stable/network-triage/: SKILL.md
skills-stable/observability-contracts/: SKILL.md
skills-stable/operate-linux-servers/: SKILL.md
skills-stable/operate-snell/: SKILL.md
skills-stable/oracle/: SKILL.md
skills-stable/prek/: SKILL.md
skills-stable/schedule-agent-work/: SKILL.md
skills-stable/scheduled-loop/: SKILL.md
skills-stable/scheduled-work/: SKILL.md
skills-stable/shelley-backup/: SKILL.md
skills-stable/sing-box-reality-hy2/: SKILL.md
skills-stable/start-convex-web-app/: SKILL.md
skills-stable/summarize-lark-meetings/: SKILL.md
skills-stable/surge/: SKILL.md
skills-stable/surge-patch/: SKILL.md
skills-stable/things/: SKILL.md
skills-stable/web-fullstack-start/: SKILL.md
skillshare/: .skillshare-meta.json  SKILL.md
skillshare/references/: init.md  install.md  status.md  sync.md
skillshare/scripts/: run.sh
stable/brrr-now/: SKILL.md
stable/brrr-now-patch/: SKILL.md
stable/codex-trace-inspect/: SKILL.md
stable/feishu-im-snapshot/: SKILL.md
stable/linear-cli-patch/: SKILL.md
stable/linux-server/: SKILL.md
stable/network-triage/: SKILL.md
stable/prek/: SKILL.md
stable/shelley-backup/: SKILL.md
stable/surge/: SKILL.md
stl/: .skillshare-meta.json
stl-cli/: .skillshare-meta.json
surge/: SKILL.md
surge-cli/: SKILL.md
surge-proxy/: .skillshare-meta.json  SKILL.md
tigris-bucket-management/: .skillshare-meta.json
tigris-object-operations/: .skillshare-meta.json
tigris-snapshots-forking/: .skillshare-meta.json
tigris-snapshots-recovery/: .skillshare-meta.json
vps/: .skillshare-meta.json
xurl/: .skillshare-meta.json  go.mod  go.sum
(+140 files in other folders)
