[project]
name = "skills"
version = "0.1.0"
description = "Skills for Amp & Codex"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "logfire>=4.35.0",
    "modal>=1.4.3",
    "openai>=2.41.0",
    "pillow>=12.2.0",
    "tiktoken>=0.13.0",
    "torch>=2.12.0",
    "turbopuffer>=2.3.0",
    "typer>=0.26.7",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.7",
    "ruff>=0.15.16",
    "ty>=0.0.44",
]

[tool.ruff]
exclude = [
    "skills-beta/actionbook/",
    "skills-beta/architecture-diagram/",
    "skills-beta/autoreview/",
    "skills-beta/browser-harness/",
    "skills-beta/diagram-design/",
    "skills-beta/grill-me/",
    "skills-beta/handoff/",
    "skills-beta/improve-codebase-architecture/",
    "skills-beta/manim-video/",
    "skills-beta/scraping/scrapling-official/",
    "skills-beta/slidev/",
    "skills-beta/thermo-nuclear-code-quality-review/",
    "skills-stable/longbridge/",
    "skillshare/",
]
indent-width = 4
line-length = 120
target-version = "py314"

[tool.ruff.lint]
extend-select = ["BLE001"]
ignore = ["E501", "TID252"]
select = ["E", "W", "F", "UP", "B", "SIM", "I", "TID"]
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.format]
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.tombi.files]
exclude = [
    "skills-beta/actionbook/**",
    "skills-beta/architecture-diagram/**",
    "skills-beta/autoreview/**",
    "skills-beta/browser-harness/**",
    "skills-beta/diagram-design/**",
    "skills-beta/grill-me/**",
    "skills-beta/handoff/**",
    "skills-beta/improve-codebase-architecture/**",
    "skills-beta/manim-video/**",
    "skills-beta/scraping/scrapling-official/**",
    "skills-beta/slidev/**",
    "skills-beta/thermo-nuclear-code-quality-review/**",
    "skills-stable/longbridge/**",
    "skillshare/**",
]

[tool.tombi.format.rules]
indent-style = "space"
indent-width = 4

[tool.ty.environment]
python-version = "3.14"

[tool.ty.rules]
unresolved-import = "warn"

[tool.ty.src]
exclude = [
    "skills-beta/actionbook/",
    "skills-beta/architecture-diagram/",
    "skills-beta/autoreview/",
    "skills-beta/browser-harness/",
    "skills-beta/diagram-design/",
    "skills-beta/grill-me/",
    "skills-beta/handoff/",
    "skills-beta/improve-codebase-architecture/",
    "skills-beta/manim-video/",
    "skills-beta/scraping/scrapling-official/",
    "skills-beta/slidev/",
    "skills-beta/thermo-nuclear-code-quality-review/",
    "skills-stable/longbridge/",
    "skillshare/",
]
