[project]
name = "skills"
version = "0.1.0"
description = "Skills for Amp & Codex"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "logfire>=4.37.0",
    "modal>=1.5.0",
    "openai>=2.43.0",
    "pillow>=12.2.0",
    "tiktoken>=0.13.0",
    "torch>=2.12.1",
    "turbopuffer>=2.4.0",
    "typer>=0.26.7",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.8",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    "ty>=0.0.51",
]

[tool.ruff]
exclude = [
    "skills-beta/actionbook/",
    "skills-beta/agent-browser/",
    "skills-beta/autoreview/",
    "skills-beta/browser-harness/",
    "skills-beta/convex/convex/",
    "skills-beta/convex/convex-create-component/",
    "skills-beta/convex/convex-migration-helper/",
    "skills-beta/convex/convex-performance-audit/",
    "skills-beta/convex/convex-quickstart/",
    "skills-beta/convex/convex-setup-auth/",
    "skills-beta/convex/design/",
    "skills-beta/convex/mike-convex-thumbnail/",
    "skills-beta/convex/quickstart/",
    "skills-beta/frontend-design/",
    "skills-beta/handoff/",
    "skills-beta/improve-codebase-architecture/",
    "skills-beta/manim-video/",
    "skills-beta/scraping/scrapling-official/",
    "skills-beta/shadcn/",
    "skills-beta/text-to-lottie/",
    "skills-beta/thermo-nuclear-code-quality-review/",
    "skills-stable/longbridge/",
    "skillshare/",
]
indent-width = 4
line-length = 120
target-version = "py314"

[tool.ruff.lint]
extend-select = ["BLE001"]
ignore = ["E501", "TID252"]
select = ["E", "W", "F", "UP", "B", "SIM", "I", "TID"]
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.format]
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.tombi.files]
exclude = [
    "skills-beta/actionbook/**",
    "skills-beta/agent-browser/**",
    "skills-beta/autoreview/**",
    "skills-beta/browser-harness/**",
    "skills-beta/convex/convex/**",
    "skills-beta/convex/convex-create-component/**",
    "skills-beta/convex/convex-migration-helper/**",
    "skills-beta/convex/convex-performance-audit/**",
    "skills-beta/convex/convex-quickstart/**",
    "skills-beta/convex/convex-setup-auth/**",
    "skills-beta/convex/design/**",
    "skills-beta/convex/mike-convex-thumbnail/**",
    "skills-beta/convex/quickstart/**",
    "skills-beta/frontend-design/**",
    "skills-beta/handoff/**",
    "skills-beta/improve-codebase-architecture/**",
    "skills-beta/manim-video/**",
    "skills-beta/scraping/scrapling-official/**",
    "skills-beta/shadcn/**",
    "skills-beta/text-to-lottie/**",
    "skills-beta/thermo-nuclear-code-quality-review/**",
    "skills-stable/longbridge/**",
    "skillshare/**",
]

[tool.tombi.format.rules]
indent-style = "space"
indent-width = 4

[tool.ty.environment]
python-version = "3.14"

[tool.ty.rules]
unresolved-import = "warn"

[tool.ty.src]
exclude = [
    "skills-beta/actionbook/",
    "skills-beta/agent-browser/",
    "skills-beta/autoreview/",
    "skills-beta/browser-harness/",
    "skills-beta/convex/convex/",
    "skills-beta/convex/convex-create-component/",
    "skills-beta/convex/convex-migration-helper/",
    "skills-beta/convex/convex-performance-audit/",
    "skills-beta/convex/convex-quickstart/",
    "skills-beta/convex/convex-setup-auth/",
    "skills-beta/convex/design/",
    "skills-beta/convex/mike-convex-thumbnail/",
    "skills-beta/convex/quickstart/",
    "skills-beta/frontend-design/",
    "skills-beta/handoff/",
    "skills-beta/improve-codebase-architecture/",
    "skills-beta/manim-video/",
    "skills-beta/scraping/scrapling-official/",
    "skills-beta/shadcn/",
    "skills-beta/text-to-lottie/",
    "skills-beta/thermo-nuclear-code-quality-review/",
    "skills-stable/longbridge/",
    "skillshare/",
]
