[project]
name = "skills"
version = "0.1.0"
description = "Skills for Amp & Codex"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "logfire>=4.37.0",
    "modal>=1.5.0",
    "openai>=2.43.0",
    "pillow>=12.2.0",
    "tiktoken>=0.13.0",
    "torch>=2.12.1",
    "turbopuffer>=2.4.0",
    "typer>=0.26.7",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.8",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    "ty>=0.0.51",
]

[tool.ruff]
exclude = [
    "skills-beta/actionbook/",
    "skills-beta/agent-browser/",
    "skills-beta/autoreview/",
    "skills-beta/frontend-design/",
    "skills-beta/handoff/",
    "skills-beta/manim-video/",
    "skills-beta/thermo-nuclear-code-quality-review/",
    "skills-mattpocock/ask-matt/",
    "skills-mattpocock/code-review/",
    "skills-mattpocock/codebase-design/",
    "skills-mattpocock/diagnosing-bugs/",
    "skills-mattpocock/domain-modeling/",
    "skills-mattpocock/grill-me/",
    "skills-mattpocock/grill-with-docs/",
    "skills-mattpocock/grilling/",
    "skills-mattpocock/handoff/",
    "skills-mattpocock/implement/",
    "skills-mattpocock/improve-codebase-architecture/",
    "skills-mattpocock/prototype/",
    "skills-mattpocock/research/",
    "skills-mattpocock/resolving-merge-conflicts/",
    "skills-mattpocock/setup-matt-pocock-skills/",
    "skills-mattpocock/tdd/",
    "skills-mattpocock/teach/",
    "skills-mattpocock/to-issues/",
    "skills-mattpocock/to-prd/",
    "skills-mattpocock/triage/",
    "skills-mattpocock/writing-great-skills/",
    "skills-stable/longbridge/",
    "skillshare/",
]
indent-width = 4
line-length = 120
target-version = "py314"

[tool.ruff.lint]
extend-select = ["BLE001"]
ignore = ["E501", "TID252"]
select = ["E", "W", "F", "UP", "B", "SIM", "I", "TID"]
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.format]
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.tombi.files]
exclude = [
    "skills-beta/actionbook/**",
    "skills-beta/agent-browser/**",
    "skills-beta/autoreview/**",
    "skills-beta/frontend-design/**",
    "skills-beta/handoff/**",
    "skills-beta/manim-video/**",
    "skills-beta/thermo-nuclear-code-quality-review/**",
    "skills-mattpocock/ask-matt/**",
    "skills-mattpocock/code-review/**",
    "skills-mattpocock/codebase-design/**",
    "skills-mattpocock/diagnosing-bugs/**",
    "skills-mattpocock/domain-modeling/**",
    "skills-mattpocock/grill-me/**",
    "skills-mattpocock/grill-with-docs/**",
    "skills-mattpocock/grilling/**",
    "skills-mattpocock/handoff/**",
    "skills-mattpocock/implement/**",
    "skills-mattpocock/improve-codebase-architecture/**",
    "skills-mattpocock/prototype/**",
    "skills-mattpocock/research/**",
    "skills-mattpocock/resolving-merge-conflicts/**",
    "skills-mattpocock/setup-matt-pocock-skills/**",
    "skills-mattpocock/tdd/**",
    "skills-mattpocock/teach/**",
    "skills-mattpocock/to-issues/**",
    "skills-mattpocock/to-prd/**",
    "skills-mattpocock/triage/**",
    "skills-mattpocock/writing-great-skills/**",
    "skills-stable/longbridge/**",
    "skillshare/**",
]

[tool.tombi.format.rules]
indent-style = "space"
indent-width = 4

[tool.ty.environment]
python-version = "3.14"

[tool.ty.rules]
unresolved-import = "warn"

[tool.ty.src]
exclude = [
    "skills-beta/actionbook/",
    "skills-beta/agent-browser/",
    "skills-beta/autoreview/",
    "skills-beta/frontend-design/",
    "skills-beta/handoff/",
    "skills-beta/manim-video/",
    "skills-beta/thermo-nuclear-code-quality-review/",
    "skills-mattpocock/ask-matt/",
    "skills-mattpocock/code-review/",
    "skills-mattpocock/codebase-design/",
    "skills-mattpocock/diagnosing-bugs/",
    "skills-mattpocock/domain-modeling/",
    "skills-mattpocock/grill-me/",
    "skills-mattpocock/grill-with-docs/",
    "skills-mattpocock/grilling/",
    "skills-mattpocock/handoff/",
    "skills-mattpocock/implement/",
    "skills-mattpocock/improve-codebase-architecture/",
    "skills-mattpocock/prototype/",
    "skills-mattpocock/research/",
    "skills-mattpocock/resolving-merge-conflicts/",
    "skills-mattpocock/setup-matt-pocock-skills/",
    "skills-mattpocock/tdd/",
    "skills-mattpocock/teach/",
    "skills-mattpocock/to-issues/",
    "skills-mattpocock/to-prd/",
    "skills-mattpocock/triage/",
    "skills-mattpocock/writing-great-skills/",
    "skills-stable/longbridge/",
    "skillshare/",
]
